# EverGrow

./: README.md  main.py  pyproject.toml  test.py  test_model_switch.py
config/: prompts.yml
core/: __init__.py
core/auth/: __init__.py  auther.py
core/manager/: __init__.py  database.py
scripts/: __init__.py  init_db.py
utils/: config_loader.py  logger_handler.py  path_tool.py  search_tool.py
